--- a/APPD/Views/MainView.xaml
+++ b/APPD/Views/MainView.xaml
@@ -18,6 +18,9 @@
         <DataTemplate DataType="{x:Type viewModels:HomeViewModel}">
             <views:HomeView />
         </DataTemplate>
+        <DataTemplate DataType="{x:Type viewModels:SignUpViewModel}">
+            <views:SignUpView />
+        </DataTemplate>
     </Window.Resources>
 
     <Grid Width="1200">
