--- a/APPD/Views/SignUpView.xaml
+++ b/APPD/Views/SignUpView.xaml
@@ -1,20 +1,20 @@
-﻿<UserControl x:Class="APPD.Views.LoginView"
+﻿<UserControl x:Class="APPD.Views.SignUpView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:APPD"
              xmlns:viewModels="clr-namespace:APPD.ViewModels"
-             xmlns:models="clr-namespace:APPD.Models"
              xmlns:converters="clr-namespace:APPD.Views.Converters"
+             xmlns:models="clr-namespace:APPD.Models"
              xmlns:extToolkit="http://schemas.xceed.com/wpf/xaml/toolkit" IsTabStop="False"
              mc:Ignorable="d"  
              d:DesignWidth="1200" d:DesignHeight="675"
              >
     <UserControl.Resources>
-        <converters:InvertVisibilityAsCollasped x:Key="InvertVisibility" />
+        <converters:ConvertPasswordBoxesToArray x:Key="pwdBoxes" />
     </UserControl.Resources>
-
+    
     <Grid Width="1200" Height="675" RenderTransformOrigin="0.5,0.5">
         <Grid.Background>
             <ImageBrush ImageSource="pack://application:,,,/Assets/Images/LoginBackground.png">
@@ -29,7 +29,7 @@
             </ImageBrush>
         </Grid.Background>
         <StackPanel Margin="10" Width="300" Height="400" RenderTransformOrigin="0, 0">
-            <StackPanel.RenderTransform> 
+            <StackPanel.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
@@ -37,26 +37,14 @@
                     <TranslateTransform X="160" Y="-47"/>
                 </TransformGroup>
             </StackPanel.RenderTransform>
-
-            <Label Content="LOGIN" FontFamily="Impact" FontSize="26" HorizontalAlignment="Right"/>
             
-            <StackPanel Orientation="Horizontal" 
-                        Visibility="{Binding UserCreatedMessageVisibility, Converter={StaticResource InvertVisibility}}">
-                <Label Content="Don't have an account?" />
+            <Label Content="ACCOUNT REGISTRATION" FontFamily="Impact" FontSize="24" HorizontalAlignment="Right"/>
+            <StackPanel Orientation="Horizontal">
+                <Label Content="Already have an account?" />
                 <Button BorderBrush="{x:Null}"
-                        Content="Sign Up!"
+                        Content="Sign In."
                         Foreground="#FF0202FF" Background="{x:Null}"
-                        Command="{Binding SignUpCommand}"
-                        />
-            </StackPanel>
-            
-            <StackPanel Orientation="Horizontal" 
-                        Visibility="{Binding UserCreatedMessageVisibility}">
-                <Label Content="New account created!" />
-                <Button BorderBrush="{x:Null}"
-                        Content="Make another?"
-                        Foreground="#FF0202FF" Background="{x:Null}"
-                        Command="{Binding SignUpCommand}"
+                        Command="{Binding BackToSignInCommand}"
                         />
             </StackPanel>
             
@@ -72,6 +60,7 @@
                 KeyboardNavigation.TabNavigation="Continue"
             >
             </extToolkit:WatermarkTextBox>
+            
             <PasswordBox Margin="10" 
                      x:Name="passwordBox" 
                      FontFamily="Segoe UI Light" FontSize="16" Opacity="0.7"
@@ -86,15 +75,38 @@
                         </VisualBrush.Visual>
                     </VisualBrush>
                 </PasswordBox.Background>
+            </PasswordBox>
+            
+            <PasswordBox Margin="10" 
+                     x:Name="cfmPasswordBox" 
+                     FontFamily="Segoe UI Light" FontSize="16" Opacity="0.7"
+                    BorderThickness="4"
+                    BorderBrush="Black"
+                     GotFocus="passwordBoxFocused" LostFocus="passwordBoxLostFocus" TabIndex="1"
+                     KeyboardNavigation.TabNavigation="Continue">
+                <PasswordBox.Background>
+                    <VisualBrush Stretch="None" AlignmentX="Left">
+                        <VisualBrush.Visual>
+                            <Label>Retype Password</Label>
+                        </VisualBrush.Visual>
+                    </VisualBrush>
+                </PasswordBox.Background>
                 <PasswordBox.InputBindings>
                     <KeyBinding 
                         Key="Return"
-                        Command="{Binding LogInCommand}"
-                        CommandParameter="{Binding ElementName=passwordBox}"
-                        />
+                        Command="{Binding RegisterCommand}"
+                    >
+                        <KeyBinding.CommandParameter>
+                            <MultiBinding Converter="{StaticResource pwdBoxes}">
+                                <Binding ElementName="passwordBox" />
+                                <Binding ElementName="cfmPasswordBox" />
+                            </MultiBinding>
+                        </KeyBinding.CommandParameter>
+                    </KeyBinding>
                 </PasswordBox.InputBindings>
             </PasswordBox>
-            <TextBox Text="{Binding Path=LogInErrorDisplay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+            
+            <TextBox Text="{Binding Path=ErrorDisplay, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
                      Foreground="Red" 
                      FontFamily="Segoe UI Semibold" 
                      Margin="20 0 3 3"
@@ -102,23 +114,23 @@
                      IsTabStop="False" 
                      Focusable="False" 
                      Cursor="Arrow"/>
-            <Button Content="LOG IN"
+            
+            <Button Content="REGISTER"
                     Margin="10"
                     Width="160" Height="60"
                     FontFamily="Impact" FontSize="24"
                     Background="#FF239723"
                     Foreground="White"
-                    Command="{Binding LogInCommand}" 
-                    CommandParameter="{Binding ElementName=passwordBox}" TabIndex="2"></Button>
+                    Command="{Binding RegisterCommand}" 
+                    TabIndex="2">
+                <Button.CommandParameter>
+                    <MultiBinding Converter="{StaticResource pwdBoxes}">
+                        <Binding ElementName="passwordBox" />
+                        <Binding ElementName="cfmPasswordBox" />
+                    </MultiBinding>
+                </Button.CommandParameter>
+            </Button>
             
-            <!--<Button Content="SIGN UP" 
-                    Margin="10"
-                    Width="160" Height="60"
-                    Background="Black"
-                    Foreground="White"
-                    FontFamily="Impact" FontSize="24" TabIndex="3"
-                    Command="{Binding SignUpCommand}"
-                    ></Button>-->
         </StackPanel>
     </Grid>
 </UserControl>
